<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="@dimen/spacing_sm"
    app:cardCornerRadius="@dimen/spacing_sm"
    android:layout_marginTop="@dimen/spacing_sm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/countryCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_sm"
        >

        <TextView
            android:id="@+id/fixedCountryShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_short_name"
            android:layout_marginStart="@dimen/spacing_lg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/locationRegionName"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/countryShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/nome_abreviado_API"
            android:layout_marginStart="@dimen/spacing_sm"
            app:layout_constraintStart_toEndOf="@id/fixedCountryShortName"
            app:layout_constraintTop_toTopOf="@id/countryCard"
            style="@style/TextAppearance.AppCompat.Caption"
            />

        <TextView
            android:id="@+id/fixedLocationRegionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_region_name"
            android:layout_marginStart="@dimen/spacing_lg"
            app:layout_constraintStart_toStartOf="@id/countryCard"
            app:layout_constraintTop_toBottomOf="@id/countryShortName"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/locationRegionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/nome_da_localizacao_regiao_API"
            android:layout_marginStart="@dimen/spacing_sm"
            app:layout_constraintStart_toEndOf="@id/fixedLocationRegionName"
            app:layout_constraintTop_toBottomOf="@id/countryShortName"
            style="@style/TextAppearance.AppCompat.Caption"

            />

        <TextView
            android:id="@+id/fixedGovernmentCapitalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/government_capital_name"
            android:layout_marginStart="@dimen/spacing_lg"
            app:layout_constraintStart_toStartOf="@id/countryCard"
            app:layout_constraintTop_toBottomOf="@id/locationRegionName"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/governmentCapitalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/nome_da_capital_governo_API"
            android:layout_marginStart="@dimen/spacing_sm"
            app:layout_constraintStart_toEndOf="@id/fixedGovernmentCapitalName"
            app:layout_constraintTop_toBottomOf="@id/locationRegionName"
            style="@style/TextAppearance.AppCompat.Caption"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>